--- a/content/posts/2019-10-01---WILT.md
+++ b/content/posts/2019-10-01---WILT.md
@@ -6,10 +6,10 @@ draft: false
 slug: "/posts/wilt/"
 category: "HTML & CSS"
 tags:
-  - "html"
-  - "css"
+  - "HTML"
+  - "CSS"
 description: What I Learned Today (HTML & CSS)
-socialImage: "/media/html_css_book.jpg"
+socialImage: "../../static/media/html_css_book.jpg"
 ---
 
 > # HTML (Hyper Text Markup Language)
@@ -106,7 +106,7 @@ socialImage: "/media/html_css_book.jpg"
      상대 위치가 지정된 엘리먼트에 top이나 right, bottom, left를 지정하면 기본 위치와 다르게 위치가 조정된다. 다른 콘텐츠는 해당 엘리먼트에서 남긴 공백에 맞춰 들어가게끔 조정되지는 않는다.
    
    + absolute :
-   
+
      An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed). However; if an absolute positioned element has no positioned ancestors, it uses the document body, and moves along with page scrolling.
 
      가장 가까운 곳에 위치한 조상 엘리먼트에 상대적으로 위치가 조정된다는 점을 제외하면 fixed와 비슷하게 동작한다. 참고로 상대적으로 위치가 조정되게끔 지정된 엘리먼트는 position: static;인 경우를 제외하고 정해진다.
