--- a/content/posts/2019-10-01---WILT.md
+++ b/content/posts/2019-10-01---WILT.md
@@ -50,10 +50,10 @@ socialImage: "../../static/media/html_css_book.jpg"
    </br>
    <img src="../../static/media/css_box_model.png" alt="css_box_model">
    </br>
-   + Content -> The content of the box, where text and images appear
-   + Padding -> Clears an area around the content. The padding is transparent
-   + Border -> A border that goes around the padding and content
-   + Margin -> Clears an area outside the border. The margin is transparent
+   * Content -> The content of the box, where text and images appear</br>
+   * Padding -> Clears an area around the content. The padding is transparent</br>
+   * Border -> A border that goes around the padding and content</br>
+   * Margin -> Clears an area outside the border. The margin is transparent</br>
   
    ( {margin: 10px;} = { margin: 10px 10px 10px 10px;} = {위, 오, 아래, 왼} =
    {margin-top: 10px; margin-right: 10px; margin-bottom: 10px; margin-left: 10px;})
@@ -63,11 +63,11 @@ socialImage: "../../static/media/html_css_book.jpg"
  
 * ### CSS Selector
   
-   + p.p-tag {} -> p 태그이면서, p-tag 클래스
-   + p#third-line {} -> p 태그이면서, third-line 아이디
-   + .pre span {} -> pre 클래스 안에 있는, span 태그
-   + .a div .b .pre span {} -> a 클래스 안에, div 태그 안에, b 클래스 안에, pre 클래스 안에 있는, span 태그
-   + div .container li.first-list {} -> div 태그 안에, container 클래스 안에, li 태그이면서, first-list 클래스
+   * p.p-tag {} -> p 태그이면서, p-tag 클래스
+   * p#third-line {} -> p 태그이면서, third-line 아이디
+   * .pre span {} -> pre 클래스 안에 있는, span 태그
+   * .a div .b .pre span {} -> a 클래스 안에, div 태그 안에, b 클래스 안에, pre 클래스 안에 있는, span 태그
+   * div .container li.first-list {} -> div 태그 안에, container 클래스 안에, li 태그이면서, first-list 클래스
   
    Selector Priority : tag <<<<< class <<<< id <<<<<< inline css
   
@@ -80,8 +80,8 @@ socialImage: "../../static/media/html_css_book.jpg"
   
 * ### Block vs Inline
   
-   + Block 요소 예시 : header, footer, p, li, table, div, h1 등 대부분의 HTML element
-   + Inline 요소 예시 : span, a, img 등
+   * Block 요소 예시 : header, footer, p, li, table, div, h1 등 대부분의 HTML element
+   * Inline 요소 예시 : span, a, img 등
   
    CSS를 이용해서 Block 요소 성질을 가진 Inline 요소, Inline 요소 성질을 가진 Block 요소를 만들 수 있다.
   
@@ -93,22 +93,19 @@ socialImage: "../../static/media/html_css_book.jpg"
 
 * ### The position property
   
-   + fixed :
-
+   + fixed :</br>
      An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element. A fixed element does not leave a gap in the page where it would normally have been located.
 
      페이지가 스크롤되더라도 늘 같은 곳에 위치하게끔 설정할 때 사용한다.
    
-   + relative :
-
+   + relative :</br>
      An element with position: relative; is positioned relative to its normal position. Setting the top, right, bottom, and left properties of a relatively-positioned element will cause it to be adjusted away from its normal position. Other content will not be adjusted to fit into any gap left by the element.
-
+     
      상대 위치가 지정된 엘리먼트에 top이나 right, bottom, left를 지정하면 기본 위치와 다르게 위치가 조정된다. 다른 콘텐츠는 해당 엘리먼트에서 남긴 공백에 맞춰 들어가게끔 조정되지는 않는다.
    
-   + absolute :
-
+   + absolute :</br>
      An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed). However; if an absolute positioned element has no positioned ancestors, it uses the document body, and moves along with page scrolling.
-
+     
      가장 가까운 곳에 위치한 조상 엘리먼트에 상대적으로 위치가 조정된다는 점을 제외하면 fixed와 비슷하게 동작한다. 참고로 상대적으로 위치가 조정되게끔 지정된 엘리먼트는 position: static;인 경우를 제외하고 정해진다.
  ***
 
