re-clone on macbook

--- a/content/posts/2019-10-01---TIL.md
+++ b/content/posts/2019-10-01---TIL.md
@@ -1,14 +1,14 @@
 ---
-title: WILT
-date: "Tue Oct 01 2019 12:00:00 GMT+0900"
+title: TIL
+date: "Tue Oct 1 2019 12:00:00 GMT+0900"
 template: "post"
 draft: false
-slug: "/posts/wilt/"
+slug: "/posts/til/"
 category: "HTML & CSS"
 tags:
   - "HTML"
   - "CSS"
-description: What I Learned Today (HTML & CSS)
+description: Today I Learned (HTML & CSS)
 socialImage: "../../static/media/html_css_book.jpg"
 ---
 
