--- a/content/posts/2019-10-1---TIL (191001).md
+++ b/content/posts/2019-10-1---TIL (191001).md
@@ -1,6 +1,6 @@
 ---
-title: TIL
-date: "Tue Oct 1 2019 12:00:00 GMT+0900"
+title: TIL (191001)
+date: "Tue Oct 01 2019 12:00:00 GMT+0900"
 template: "post"
 draft: false
 slug: "/posts/til/"
