9 skills developers need to have 2.0

--- a/content/posts/2019-12-13---개발자가 갖추어야 할 9가지 기술.md
+++ b/content/posts/2019-12-13---개발자가 갖추어야 할 9가지 기술.md
@@ -9,11 +9,11 @@ tags:
   - "Hard Skills"
   - "Soft Skills"
   - "Business Skills"
-description: Linked List
+description: 9 skills developers need to have.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
 
-<img src="../../static/media/devg_junior.jpg">
+<!-- <img src="../../static/media/devg_junior.jpg"> -->
 
 ![스크린샷 2019-12-13 오후 3.09.45.png](https://images.velog.io/post-images/qkrcndtlr123/36429510-1d6f-11ea-8889-c55a8eb206d3/-2019-12-13-3.09.45.png)
 
