tag modified and make posts

--- a/content/posts/2019-12-13---AI: 막막해 하는 당신에게.md
+++ b/content/posts/2019-12-13---AI: 막막해 하는 당신에게.md
@@ -1,18 +1,14 @@
 ---
-title: 개발자가 갖추어야 할 9가지 기술
+title: AI: 막막해 하는 당신에게
 date: "2019-12-13T12:00:00+09:00"
 template: "post"
 draft: false
 slug: "/posts/9_skills_developers_need_to_have/"
 category: "Conference"
 tags:
-  - "DEVGROUND JUNIOR 2019"
-  - "개발"
-  - "개발자"
-  - "성장"
-  - "엔지니어"
-  - "평생공부"
-  - "학습"
+  - "Hard Skills"
+  - "Soft Skills"
+  - "Business Skills"
 description: 9 skills developers need to have.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
