suggestions_for_web_frontend_developers_who_want_to_grow

--- a/content/posts/2019-12-13---AI: 막막해 하는 당신에게.md
+++ b/content/posts/2019-12-13---AI: 막막해 하는 당신에게.md
@@ -1,11 +1,12 @@
 ---
-title: AI: 막막해 하는 당신에게
+title: AI! 막막해 하는 당신에게
 date: "2019-12-13T12:00:00+09:00"
 template: "post"
 draft: false
 slug: "/posts/9_skills_developers_need_to_have/"
 category: "Conference"
 tags:
+  - "DEVGROUND JUNIOR 2019"
   - "Hard Skills"
   - "Soft Skills"
   - "Business Skills"
