--- a/content/posts/2019-12-13---성장을 바라는 웹 프론트엔드 개발자를 위한 제언.md
+++ b/content/posts/2019-12-13---성장을 바라는 웹 프론트엔드 개발자를 위한 제언.md
@@ -3,129 +3,100 @@ title: 성장을 바라는 웹 프론트엔드 개발자를 위한 제언
 date: "2019-12-13T12:00:00+09:00"
 template: "post"
 draft: false
-slug: "/posts/9_skills_developers_need_to_have/"
+slug: "/posts/suggestions_for_web_frontend_developers_who_want_to_grow/"
 category: "Conference"
 tags:
-  - "Hard Skills"
-  - "Soft Skills"
-  - "Business Skills"
-description: 9 skills developers need to have.
+  - "DEVGROUND JUNIOR 2019"
+  - "개발"
+  - "개발자"
+  - "배움"
+  - "성장"
+  - "웹프론트엔드"
+description: Suggestions for Web FrontEnd Developers who want to grow.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
 
 <!-- <img src="../../static/media/devg_junior.jpg"> -->
 
-![스크린샷 2019-12-13 오후 3.09.45.png](https://images.velog.io/post-images/qkrcndtlr123/36429510-1d6f-11ea-8889-c55a8eb206d3/-2019-12-13-3.09.45.png)
+![스크린샷 2019-12-13 오후 3.08.15.png](https://images.velog.io/post-images/qkrcndtlr123/002f32d0-1d6f-11ea-8889-c55a8eb206d3/-2019-12-13-3.08.15.png)
 
-> # Hard Skills
+##### Q. 성장해야만 한다! 성장해야만 할까?
 
-### 1. Basic Knowledge
+##### A. 성장이 뭐지? 계속 성장해야하는가?
 
-### 2. Understanding for product
+> ## 성장을 바라보는 두 가지 시선
 
-내가 맛있어야 남도 맛있다.
-자기가 좋아하는 것을 만드는 것. 남이 좋아하는 것을 만드는 것. 돈을 벌기 위해 만드는 것.
+- 내가 생각하는 성장
+- 내가 **상상하는** 성장
 
-### 3. Develop Cycle
+#### 상상 vs 현실
 
-- Requirements & Analysis
-- Design & Modeling
-- Implementation
-- Test/Realease
-- Feedback/Update
+상상과 현실에는 괴리가 있다.
+상상으로 이미지를 그릴 때는 '토니 스타크'
+현실은 '토니 스타크'의 차키를 받는 호텔리어.
 
-1:1:1:1:1 의 비율을 가져간다는 것
-책 읽기 & 다른 분야 사람 만나기
+#### "누구나 스스로 토발즈가 아니라고 생각은 하지만..."
 
-[How google testes software]
+#### "나만의 호흡과 전략. 의미있는 훈련이 필요하다."
 
-> # Soft Skills
+사람마다 훈련하는 방식 또는 전략이 다르다
 
-남들과 잘 지내고 소통하고,
-의견을 나누고 아이디어를 합치고,
-많은 사람들과 함께 일을 할 때 파워가 발생
+#### "개발자가 되는 길은 마라톤이다... 조급해 하면 지는 것이다. 긴 호흡을 가져라."
 
-### 4. Project Management
+목표, 실행, 피드백, 충전, 목표, 실행, 피드백, 충전... 목표.... (무수히 반복하는 마라톤이라고 생각, 중간에 쳐지지 않고 무너지지 않기 위해서는 충전)
+목표를 아주작게 구체적으로 세우고, 실행을 하고, 반드시 피드백을 받고(본인 말고 타인에게), 다시 새로운 목표를 세우기 전엔 반드시 충전
 
-- Why, What, How
-- Triple Constraints
-  - Costs (Resources)
-  - Time (Schedule)
-  - Scope (Quality)
+- 타인이 바라보는 성장
+- 타인이 **평가하는** 성장
 
-### 5. Team Management
+#### "성장을 위한 결심만으로는 부족하고 객관화를 위한 측정 지표를 만들자"
 
-- Forming -> Storming -> Norming -> Performing
-  조직의 변화를 주기위해서 강요하는 순간 그 조직은 무너진다.
-  관찰과 코칭이 중요하다.
-  넛징(조금씩 조금씩 푸시하기, 급하면 망한다.)
-  - 미국 조직(역량, 신뢰, 소통)
-  - 한국 조직(역량, 신뢰, 소통) + "관계" - 형님 리더십
-    관계 없이도 성공할 수 있는 것이 관건
-  - Trust & Knowledg
+피드백을 받는 것 중요! 정확하게 어떤 것을 피드백 받기 위함인지 구체화 시켜라.
+어떤 프레임워크를 가지고, 어플리케이션을 만드려고 하는데, 기능이 추가시켰을 때도, 문제가 발생하지 않도록 만들어야 해. <- 예시
 
-### 6. Process (Agile,Zero-Bug) & People
+> ## "결심한 목표와 형태가 적절한가?"
 
-- 프로세스의 목적 2가지
-  어떤 일을 잘하기 위해서 만드는 것이 아니라 실패하지 않기 위해서 만드는 것이다.
-  프로세스를 잘 갖추고, 그 자체를 개선한다. 체계화 후에 옵티마이즈를 한다.
-- PMMM(Project Management Maturity Model)
-  1. Initial = Common Language
-  2. Repeatable = Common Process
-  3. Defined = Singular Methodology
-  4. Managed = Benchmarking
-  5. Optimized = Continuous Improvement ex) cocacola, 3M (저 회사가 대체 뭐하는 회사지 할 만큼 끊임없는 변화가 이루어짐)
-- 다양한 타입의 사람들
-  why type "비즈니스에 신경쓰는 경우"
-  what type "제품에 신경쓰는 경우"
-  how type "기술에 신경쓰는 경우"
-  what if type "또라이: 또라이라고 무시하지말고 잘 데리고 있기."
+- 달성 기준은 무엇인가?
+- 성장 목적은 무엇인가?
 
+내가 왜 하는지에 대한 생각을 해야한다. 성장 목적이 구체화 되어 있어야 달성 기준이 정해진다.
 
-    [Debugging the development process]
-    [Teach What you know]
-    [I.M. WRIGHT'S "HARD CODE"]
+> ## "멘토에 대한 두 가지 생각"
 
-> # Business Skill
+- 멘토가 필요한 이유
+- 멘토가 없어야 하는 이유
 
-### 7. HR system
+본인이 멘토가 필요가 없다고 생각하는 정도가 되어야 성장을 할 수 있는 궤도에 올라간 것이다.
 
-- Hiring
-  - 내가 왜 이 회사를 선택했는가
-  - 왜 당신이 그 회사에 적합한지
-  - 당신은 이 회사에 와서 무엇을 할 수 있는가
-- 채용의 목표
-  - 잘하는 사람을 뽑는게 아니라 못하는 사람을 거르는 것이다
-- 3가지 포인트
-  - 똑똑함(빠르게 배우는 사람)
-  - 부지런함
-  - 착함
-- Performance Reviews
-- Title (engineering)
-  시니어와 리드의 차이는...
-  시니어는 해본 일을 잘하고 리드는 안해본 일도 잘하는 것.
-  남들이 안해본 그 영역에서 잘해야 클 수 있다!
-- Rewards
-- eduacation
+> ## "멘토와 가장 효과적인 학습 방법은?"
 
-### 8. 사업
+1:1, 1:N, N:1, N:N
 
-### 9. vision, goals, and culture
+#### "어떤 멘토가 나에게 도움을 주는 멘토일까?"
 
-- for company
-- for team
-- for you
-  ![스크린샷 2019-12-14 오전 12.54.55.png](https://images.velog.io/post-images/qkrcndtlr123/f8d22770-1dc0-11ea-96df-8fe1f918c981/-2019-12-14-12.54.55.png)
-  **나는 세상을 강한자와 약한자,
-  혹은 성공이나 실패를 얻은 사람으로나누지 않는다.
-  내가 나누는 세상은 배우는 자와 배우지 않는 자로 구성된다.**
+1:1 멘토링이 **_효과는_** 가장 좋은데 왜 그럴까? 코칭을 해주는 사람이 나에 대해서 많이 알아야 나를 잘 진단한다.
+핵심: 코치가 나에 대해서 잘 알고 있는가가 중요하다. 나의 부족한 점을 최대한 구체적으로 자각하고 있어야한다. 사실 나를 잘 파악하면 멘토도 필요없다.
 
-## 자기관리는 시간관리다 !
+#### "성장에 영향을 주는 환경에 대해 생각해 봅시다."
 
-- 돈을 쓰는데는 3가지 = 시간을 쓰는데는 3가지
+태도(배운다고 되는 영역이 아니다. 교정이 힘들다. 항상 내가 스스로 자기교정을 해야한다.) > 동료(배움을 가장 많이 주는 것. 열린 마인드를 필요하다.) > 회사 > 멘토(현혹되면 안되는 것. 자기독립성을 가지는 것이 중요하다.) > 기술(어떤 상황에서도 젤 중요함. 하지만 상황에 따라서 부수적인 상태가 될 가능성이 젤 높음.)
 
-1.  spend
-2.  waste : 줄이고 줄이고 줄여서 0퍼센트를 만들어라
-3.  invest : 20대에는 20퍼센트부터 시작해서 쭉쭉쭉 올려라
+> ## "어떤걸 배워야 할까요?"
 
-- 일주일간 본인이 쓴 시간을 정리해봐라
+나는 정말 어떤걸 배워야 하는걸까?
+지름길은 없다. 하지만 시간은 있다. 조급해하지 말아라.
+
+목표, 실행, 피드백, 충전, 목표, 실행, 피드백, 충전... 이 마라톤을 본인 속도에 맞춰서 시간을 컨트롤 할 수 있어야 한다.
+내가 할 수 있는 것. 내가 흥미를 가지는 것.
+
+# "성장 로드맵에 BEST PRACTICE는 없다!"
+
+# "성장은 환경에 대한 적응. 그럼으로 성장해야만 한다. 그러기 위해 끊임없이 질문하자. 어떻게 성장할 것인가!"
+
+자신만의 테크 트리를 짜고, 자신의 핏에 맞는 패턴을 만드는 것이 중요하다.
+혼자 성장할 수 있는 상태를 만드는 것!!!
+내가 배울 것들을 인지하고 목표를 설정하고 사이클을 돌리고 피드백을 돌리고... 이것을 행할 수 있는 상태!
+홀로서기 할 수 있는 상태! 이것이 성장의 전제이다.
+
+개인프로젝트 아이디어
+내가 써보고 싶은 것이나, 주변을 둘러봐서 남들이 불편해하는 것을 찾으면 좋을 것이다.
