--- a/content/posts/2019-12-13---AI: 막막해 하는 당신에게.md
+++ b/content/posts/2019-12-13---AI: 막막해 하는 당신에게.md
@@ -7,12 +7,12 @@ slug: "/posts/ai_to_someone_who_do_not_know_what_to_do/"
 category: "Conference"
 tags:
   - "DEVGROUND JUNIOR 2019"
-  - "개발"
-  - "공부"
-  - "딥러닝"
-  - "머신러닝"
-  - "인공지능"
-  - "학습"
+  - "develop"
+  - "study"
+  - "deep learning"
+  - "machine learning"
+  - "artificial intelligence"
+  - "education"
 description: AI! To someone who don't know what to do.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
