--- a/content/posts/2019-12-13---개발자가 갖추어야 할 9가지 기술.md
+++ b/content/posts/2019-12-13---개발자가 갖추어야 할 9가지 기술.md
@@ -7,12 +7,11 @@ slug: "/posts/9_skills_developers_need_to_have/"
 category: "Conference"
 tags:
   - "DEVGROUND JUNIOR 2019"
-  - "개발"
-  - "개발자"
-  - "성장"
-  - "엔지니어"
-  - "평생공부"
-  - "학습"
+  - "develop"
+  - "developer"
+  - "growth"
+  - "engineer"
+  - "education"
 description: 9 skills developers need to have.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
