--- a/content/posts/2019-12-13---성장을 바라는 웹 프론트엔드 개발자를 위한 제언.md
+++ b/content/posts/2019-12-13---성장을 바라는 웹 프론트엔드 개발자를 위한 제언.md
@@ -7,11 +7,11 @@ slug: "/posts/suggestions_for_web_frontend_developers_who_want_to_grow/"
 category: "Conference"
 tags:
   - "DEVGROUND JUNIOR 2019"
-  - "개발"
-  - "개발자"
-  - "배움"
-  - "성장"
-  - "웹프론트엔드"
+  - "develop"
+  - "developer"
+  - "education"
+  - "growth"
+  - "web frontend"
 description: Suggestions for Web FrontEnd Developers who want to grow.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
