--- a/content/posts/2019-10-01---TIL (191001).md
+++ b/content/posts/2019-10-01---TIL (191001).md
@@ -6,8 +6,8 @@ draft: false
 slug: "/posts/til/"
 category: "HTML & CSS"
 tags:
-  - "HTML"
-  - "CSS"
+  - "html"
+  - "css"
 description: Today I Learned (HTML & CSS)
 socialImage: "../../static/media/html_css_book.jpg"
 ---
