--- a/content/posts/2019-11-28---Promise.md
+++ b/content/posts/2019-11-28---Promise.md
@@ -6,7 +6,7 @@ draft: false
 slug: "/posts/promise/"
 category: "Javascript"
 tags:
-  - "JAVASCRIPT"
+  - "javascript"
 description: Promise is an object used for JavaScript asynchronous processing.
 socialImage: "../../static/media/promise.jpg"
 ---
