--- a/content/posts/2019-12-13---개발자를 위한 생존가이드.md
+++ b/content/posts/2019-12-13---개발자를 위한 생존가이드.md
@@ -6,11 +6,8 @@ draft: false
 slug: "/posts/survival_tips_for_developers/"
 category: "Conference"
 tags:
-  - "DEVGROUND JUNIOR 2019"
+  - "conference"
   - "developer"
-  - "productivity"
-  - "communication"
-  - "collaboration"
 description: Survival tips for developers.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
