--- a/content/posts/2019-12-13---내가 미리 알았으면 좋았을 개발 생활 팁.md
+++ b/content/posts/2019-12-13---내가 미리 알았으면 좋았을 개발 생활 팁.md
@@ -6,13 +6,8 @@ draft: false
 slug: "/posts/develop_life_tips_that_i_would_have_been_nice_to_know_in_advance/"
 category: "Conference"
 tags:
-  - "DEVGROUND JUNIOR 2019"
-  - "develop"
-  - "develop culture"
-  - "growth"
-  - "study"
-  - "habit"
-  - "education"
+  - "conference"
+  - "developer"
 description: Develop-Life Tips that I would have been nice to know in advance.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
