--- a/content/posts/2019-12-13---성장을 바라는 웹 프론트엔드 개발자를 위한 제언.md
+++ b/content/posts/2019-12-13---성장을 바라는 웹 프론트엔드 개발자를 위한 제언.md
@@ -6,10 +6,8 @@ draft: false
 slug: "/posts/suggestions_for_web_frontend_developers_who_want_to_grow/"
 category: "Conference"
 tags:
-  - "DEVGROUND JUNIOR 2019"
-  - "develop"
+  - "conference"
   - "developer"
-  - "education"
 description: Suggestions for Web FrontEnd Developers who want to grow.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
