--- a/content/posts/2019-12-13---홀로 성장하는 시대는 끝났다.md
+++ b/content/posts/2019-12-13---홀로 성장하는 시대는 끝났다.md
@@ -6,11 +6,8 @@ draft: false
 slug: "/posts/the_age_of_growth_alone_is_over/"
 category: "Conference"
 tags:
-  - "DEVGROUND JUNIOR 2019"
+  - "conference"
   - "developer"
-  - "community"
-  - "communication"
-  - "collaboration"
 description: The age of growth alone is over.
 socialImage: "../../static/media/devg_junior.jpg"
 ---
